--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <androidx.constraintlayout.widget.Guideline
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_constraintGuide_begin="396dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
-            android:id="@+id/guideline3"/>
     <TextView
             android:text="@string/title_allow_access"
             android:layout_width="283dp"
@@ -118,5 +112,28 @@
             android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="45dp"
             android:layout_marginRight="45dp" app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@android:color/background_light" android:textSize="12sp"/>
+    <Button
+            android:text="@string/continue_btn"
+            android:layout_width="88dp"
+            android:layout_height="35dp" android:id="@+id/button_continue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" android:textSize="12sp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginRight="49dp" app:layout_constraintEnd_toEndOf="parent"
+            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@android:color/background_light"
+            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
+            app:layout_constraintStart_toEndOf="@+id/button2"/>
+    <Button
+            android:text="@string/cancel_btn"
+            android:layout_width="98dp"
+            android:layout_height="35dp" android:id="@+id/button2"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="156dp"
+            android:layout_marginStart="156dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" android:textSize="12sp"
+            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@android:color/background_light"/>
+    <androidx.constraintlayout.widget.Guideline
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="680dp" android:id="@+id/guideline4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
