--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,10 @@
             android:layout_width="259dp"
             android:layout_height="28dp" android:id="@+id/switch6"
             android:textColor="@android:color/background_light"
-            android:layout_marginTop="2dp"
+            android:textSize="12sp" android:layout_marginTop="2dp"
             app:layout_constraintTop_toBottomOf="@+id/storage_title_id" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="100dp" android:layout_marginStart="100dp" android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"/>
+            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="52dp"
+            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/location_title"
             android:layout_width="wrap_content"
@@ -46,13 +46,14 @@
             android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/switch6" android:textStyle="bold"/>
     <Switch
             android:text="@string/location"
-            android:layout_width="261dp"
-            android:layout_height="24dp" android:id="@+id/switch7"
+            android:layout_width="258dp"
+            android:layout_height="29dp" android:id="@+id/switch7"
+            android:layout_marginTop="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:textColor="@android:color/background_light" android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
-            android:layout_marginStart="101dp" android:layout_marginTop="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/background_light" android:textSize="12sp"/>
+            android:layout_marginStart="101dp" android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/camara_title"
             android:layout_width="wrap_content"
@@ -66,13 +67,14 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     <Switch
             android:text="@string/camara"
-            android:layout_width="263dp"
-            android:layout_height="3dp" android:id="@+id/switch8"
-            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
-            android:textColor="@android:color/background_light" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="101dp" android:layout_marginStart="101dp"
-            android:layout_marginEnd="47dp" android:layout_marginRight="47dp"
-            app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"/>
+            android:layout_width="257dp"
+            android:layout_height="26dp" android:id="@+id/switch8"
+            android:textColor="@android:color/background_light"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
+            android:layout_marginStart="101dp" android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
     <TextView
             android:text="@string/phone_title"
             android:layout_width="wrap_content"
@@ -85,13 +87,14 @@
             android:textStyle="bold"/>
     <Switch
             android:text="@string/Phone"
-            android:layout_width="264dp"
-            android:layout_height="20dp" android:id="@+id/switch9"
-            android:layout_marginTop="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="47dp"
-            android:layout_marginRight="47dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp"
-            android:textColor="@android:color/background_light"/>
+            android:layout_width="257dp"
+            android:layout_height="27dp" android:id="@+id/switch9"
+            android:textSize="12sp"
+            android:textColor="@android:color/background_light"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginTop="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="52dp"
+            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/contacts_title"
             android:layout_width="wrap_content"
@@ -104,14 +107,14 @@
             android:layout_marginRight="253dp" app:layout_constraintEnd_toEndOf="parent"/>
     <Switch
             android:text="@string/contacts"
-            android:layout_width="265dp"
-            android:layout_height="27dp"
+            android:layout_width="258dp"
+            android:layout_height="24dp"
             android:id="@+id/switch10"
+            android:textColor="@android:color/background_light" android:textSize="12sp"
             android:layout_marginTop="7dp"
             app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="45dp"
-            android:layout_marginRight="45dp" app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/background_light" android:textSize="12sp"/>
+            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="52dp"
+            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="@string/continue_btn"
             android:layout_width="88dp"
@@ -135,5 +138,9 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintGuide_begin="680dp" android:id="@+id/guideline4"/>
+    <androidx.constraintlayout.widget.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="319dp" android:id="@+id/guideline5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
