--- a/app/src/main/res/layout/activity_given_permission.xml
+++ b/app/src/main/res/layout/activity_given_permission.xml
@@ -6,47 +6,92 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".given_permission">
-    <TextView
+    <Button
             android:text="@string/storage_activity_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/storage_activity_id"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="33dp"
+            android:layout_height="wrap_content" android:id="@+id/storage_btn_id"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/cardview_light_background"
-            app:layout_constraintBottom_toTopOf="@+id/location_activity_id"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="12sp"/>
-    <TextView
+            style="@style/Widget.AppCompat.Button.Borderless" android:textStyle="bold" android:textSize="12sp"
+            android:onClick="check_storage_listener" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="33dp"/>
+    <Button
             android:text="@string/location_activity_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/location_activity_id"
-            android:textColor="@color/cardview_light_background"
-            android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/storage_activity_id"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
-            android:layout_marginStart="176dp" android:layout_marginEnd="168dp" android:layout_marginRight="168dp"
-            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.5" android:textSize="12sp"/>
-    <TextView
+            android:layout_height="wrap_content" android:id="@+id/location_btn_id"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/storage_btn_id"
+            android:textColor="@color/cardview_light_background" android:textStyle="bold" android:textSize="12sp"
+            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="check_location_listener"/>
+    <Button
             android:text="@string/camara_activity_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/camara_activity_id"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/location_activity_id"
-            android:textStyle="bold" android:textColor="@color/cardview_light_background" android:textSize="12sp"/>
-    <TextView
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp" android:textStyle="bold"
+            android:textColor="@color/cardview_light_background" android:layout_marginTop="33dp"
+            app:layout_constraintTop_toBottomOf="@+id/location_btn_id" android:id="@+id/camara_btn_id"
+            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="check_camara_listener"/>
+    <Button
             android:text="@string/phone_activity_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/phone_activity_id"
+            android:layout_height="wrap_content" android:id="@+id/phone_btn_id"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="33dp"
-            app:layout_constraintTop_toBottomOf="@+id/camara_activity_id"
-            android:textColor="@color/cardview_light_background" android:textStyle="bold" android:textSize="12sp"/>
-    <TextView
+            app:layout_constraintTop_toBottomOf="@+id/camara_btn_id"
+            android:textColor="@color/cardview_light_background" android:textSize="12sp" android:textStyle="bold"
+            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="call_phone_listener"/>
+    <Button
             android:text="@string/contacts_activity_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/contacts_activity_id"
+            android:layout_height="wrap_content" android:id="@+id/contacts_btn_id"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent" android:textSize="12sp" android:textStyle="bold"
+            android:textColor="@color/cardview_light_background" android:layout_marginTop="33dp"
+            app:layout_constraintTop_toBottomOf="@+id/phone_btn_id" style="@style/Widget.AppCompat.Button.Borderless"
+            android:onClick="check_contacts_listener"/>
+    <ImageView
+            android:layout_width="42dp"
+            android:layout_height="35dp" app:srcCompat="@android:drawable/ic_menu_camera"
+            android:id="@+id/imageView1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/phone_activity_id"
-            android:textColor="@color/cardview_light_background" android:textStyle="bold" android:textSize="12sp"/>
+            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"
+            app:layout_constraintEnd_toStartOf="@+id/camara_btn_id"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
+            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/image_view_location"/>
+    <ImageView
+            android:layout_width="35dp"
+            android:layout_height="33dp" app:srcCompat="@android:drawable/ic_menu_save"
+            android:id="@+id/imageView_storage" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="48dp" app:layout_constraintEnd_toStartOf="@+id/storage_btn_id"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="76dp"
+            android:layout_marginStart="76dp"/>
+    <ImageView
+            android:layout_width="41dp"
+            android:layout_height="38dp" app:srcCompat="@android:drawable/ic_menu_mylocation"
+            android:id="@+id/image_view_location"
+            app:layout_constraintEnd_toStartOf="@+id/location_btn_id" android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="76dp"
+            android:layout_marginStart="76dp" android:layout_marginTop="33dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_storage"/>
+    <ImageView
+            android:layout_width="39dp"
+            android:layout_height="38dp" app:srcCompat="@android:drawable/ic_menu_call"
+            android:id="@+id/image_phone_view"
+            app:layout_constraintEnd_toStartOf="@+id/phone_btn_id"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView1" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"/>
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@android:drawable/ic_menu_my_calendar"
+            android:id="@+id/imageView4"
+            app:layout_constraintEnd_toStartOf="@+id/contacts_btn_id" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" android:layout_marginTop="46dp"
+            app:layout_constraintTop_toBottomOf="@+id/image_phone_view" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
