--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fc0404</color>
-    <color name="colorPrimaryDark">#bc0404</color>
-    <color name="colorAccent">#ff2d43</color>
+    <color name="colorPrimary">#FF0099CC</color>
+    <color name="colorPrimaryDark">#FF075670</color>
+    <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#001323</color>
 </resources>
